# pyqauto

./: .gitignore  AGENTS.md  AKSHARE_ADATA_CALLING_FIX_REPORT.md  API_DOC_CODE_CONSISTENCY_REPORT.md  API_REFERENCE_UPDATE_LOG.txt  AUTO_STABILITY_WATCH_REPORT.md  CHANGELOG.md  CODEX_FINAL_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_BASELINE.md  DISCLAIMER.md  EASYQUOTATION_CHANNEL_REPORT.md  ENVIRONMENT.md  FIELD_TOLERANCE_POLICY.md  FIELD_UNIT_FREEZE_REPORT.md  FIELD_UNIT_POLICY.md  FULL_LITE_REALTIME_USAGE_BOUNDARY.md  LATEST_SOURCE_ADAPTER_FIX_REPORT.md  LICENSE  LIVE_SMOKE_TEST_REPORT.md  LIVE_SOURCE_POLICY_DECISION.md  MANIFEST.in  MANUAL_GITHUB_PUBLISH_STEPS.md  OPEN_SOURCE_RELEASE_LOG.txt  OPEN_SOURCE_RELEASE_REPORT.md  OPEN_SOURCE_RELEASE_SUMMARY.json  OPTIONAL_BACKUP_SOURCE_REPORT.md  POST_RELEASE_PYQAUTO_031_SMOKE_TEST_LOG.txt  POST_RELEASE_PYQAUTO_031_SMOKE_TEST_REPORT.md  POST_RELEASE_PYQAUTO_031_SMOKE_TEST_SUMMARY.json  POST_RELEASE_V020_SMOKE_TEST_LOG.txt  POST_RELEASE_V020_SMOKE_TEST_REPORT.md  POST_RELEASE_V020_SMOKE_TEST_SUMMARY.json  PRODUCTION_CHECKLIST.md  PROJECT_STATE.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  PYTDX_REALTIME_PRIMARY_REPORT.md  PYTDX_RUNTIME_FAILOVER_DECISION.md  PYTDX_RUNTIME_FAILOVER_REPORT.md  (+38 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  data_source_failure.yml
.github/workflows/: ci.yml  publish.yml
aquote_router/: __init__.py  audit.py  cli.py  exceptions.py  models.py  policy.py  pytdx_probe.py  router.py
aquote_router/adapters/: __init__.py  base.py  easyquotation_sina_adapter.py  easyquotation_tencent_adapter.py  pytdx_adapter.py
astock_source_router/: __init__.py
astock_source_router/adapters/: adata_adapter.py  akshare_adapter.py  baostock_adapter.py  easyquotation_adapter.py  efinance_adapter.py  fake_adapter.py  mootdx_adapter.py  pytdx_adapter.py
astock_source_router/autonomy/: __init__.py  anomaly_detector.py  decay_model.py  recovery_engine.py  self_healing.py
astock_source_router/core/: adapter_base.py  audit_logger.py  cache.py  circuit_breaker.py  data_usage_guard.py  errors.py  features.py  health_score.py  models.py  policy.py  rate_limiter.py  registry.py  router.py  schema.py  source_switch_consistency.py  unit_normalizer.py  unit_policy.py
config/: field_unit_policy.json  pytdx_servers.example.json  pytdx_servers_extra.json  source_policy.example.yaml  source_unit_policy.json  stability_watch_schedule.json
docs/: ADAPTER_CANDIDATE_REVIEW_V040.md  ADAPTER_CONTRACT_V1.md  ADAPTER_FIELD_MAPPING_DRAFT_V040.md  ADAPTER_UNIT_RULES_DRAFT_V040.md  API_REFERENCE.md  AUDIT_TRAIL.md  AUTONOMOUS_CONTROL_LAYER.md  BEGINNER_DEVELOPER_GUIDE.md  CANDIDATE_NORMALIZE_CONTRACT_V040.md  CLI_REFERENCE.md  COMPETITOR_NOTES.md  DATA_SOURCES.md  FAQ.md  GITHUB_ABOUT_SETUP.md  KLINE_GUIDE.md  LIVE_CHECK.md  META_CONTROL_PLANE.md  RC_TESTING_GUIDE.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  RETURN_FIELDS.md  ROADMAP.md  SOAK_TEST.md  SOURCE_POLICY.md  SOURCE_POLICY_DRAFT_V040.md  SOURCE_SCHEMA_LIVE_PROBE.md  STABILITY_LAYER.md  SYMBOL_RULES.md  SYSTEM_BEHAVIOR_FREEZE.md  TROUBLESHOOTING.md  UNITS.md  V040_ADAPTER_IMPLEMENTATION_CHECKLIST.md  V1_API_FREEZE.md  V1_ARCHITECTURE.md  V1_PUBLIC_API_REFERENCE.md  VERSION_GOVERNANCE_POLICY.md
docs/zh-CN/: README.md
examples/: demo_daily_kline.py  demo_realtime.py  demo_source_health.py  diagnose_demo.py  full_realtime_quotes_demo.py  index_realtime_demo.py  minute_kline_pytdx_only_demo.py  realtime_quotes_demo.py
pyqauto/: __init__.py  cli.py  diagnostics.py  policy.py  router.py  source_schema.py  source_schema_live.py
pyqauto/adapters/: __init__.py  akshare_em_spot_adapter.py  (+3 more)
scripts/: check_dist_contents.py  check_release.py  check_source_consistency.py  check_source_switch_consistency.py  check_unit_consistency.py  daily_stability_watch.py  debug_adata_latest_raw.py  debug_akshare_latest_realtime.py  debug_akshare_raw.py  debug_easyquotation_channels.py  debug_latest_doc_calling.py  debug_optional_sources_live.py  debug_pytdx_realtime.py  debug_pytdx_runtime_failover.py  debug_pytdx_server_pool.py  doctor_env.py  install_stability_watch_task_windows.bat  live_check.py  pytdx_server_pool_refresh.py  pytdx_server_probe.py  run_stability_watch_windows.bat  run_tests_macos.sh  run_tests_windows.bat  setup_dev_macos.sh  setup_dev_windows.bat  smoke_test.py  smoke_test_live.py  smoke_test_offline.py  soak_test.py  stability_summary.py  uninstall_stability_watch_task_windows.bat  windows_acceptance.bat
tests/: conftest.py  test_adapter_contract_v1.py  test_adata_usage_boundary.py  test_akshare_em_spot_normalize.py  test_anomaly_detection.py  test_api_doc_code_consistency.py  test_audit_jsonl.py  test_audit_logger.py  test_audit_sqlite.py  test_autonomy_recovery.py  test_baostock_mock_normalize_contract.py  test_cache.py  test_candidate_normalize_docs.py  test_candidate_normalize_rejection_contract.py  test_chinese_docs.py  test_circuit_breaker.py  test_cli_command_snapshot.py  test_cli_help_without_network.py  test_cli_kline_installed_wheel.py  test_cli_probe_pytdx.py  test_daily_kline.py  test_data_sources_doc_mentions_sources.py  test_data_usage_guard.py  test_decay_model.py  test_decision_engine.py  test_diagnose_cli.py  test_diagnose_source_schema_summary.py  test_drift_detector.py  test_easyquotation_tencent_units.py  test_efinance_mock_normalize_contract.py  test_fallback.py  test_field_unit_policy.py  test_gitignore_local_active_pool.py  test_governance_integration.py  test_health_score.py  test_health_trend.py  test_lite_full_boundary_units.py  test_live_check_docs.py  test_live_probe_report_contract.py  test_live_smoke_acceptance.py  (+45 more)
(+24 files in other folders)
