[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquote-router"
version = "0.2.1"
description = "A-share quote source router with pytdx failover, easyquotation fallback and audit trail"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "aquote-router contributors" }
]
keywords = ["a-share", "quote", "router", "pytdx", "easyquotation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "easyquotation>=0.7",
  "pytdx>=1.72",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ruff>=0.5",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = []

[project.urls]
Homepage = "https://github.com/tabman2026/aquote-router"
Issues = "https://github.com/tabman2026/aquote-router/issues"

[project.scripts]
aquote-router = "aquote_router.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aquote_router*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
