[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqauto"
version = "0.3.1"
description = "A-share quote source router with pytdx failover, easyquotation fallback and audit trail"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "pyqauto contributors" }
]
keywords = ["a-share", "stock-market", "quote-router", "market-data", "pytdx", "easyquotation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
  "easyquotation>=0.7",
  "pytdx>=1.72",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
akshare = [
  "akshare>=1.12",
]
dev = [
  "build>=1.2",
  "ruff>=0.5",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = []

[project.urls]
Homepage = "https://github.com/tabman2026/pyqauto"
Repository = "https://github.com/tabman2026/pyqauto"
Documentation = "https://github.com/tabman2026/pyqauto/tree/main/docs"
Issues = "https://github.com/tabman2026/pyqauto/issues"
Changelog = "https://github.com/tabman2026/pyqauto/blob/main/CHANGELOG.md"

[project.scripts]
pyqauto = "pyqauto.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyqauto", "pyqauto*"]

[tool.setuptools.package-data]
"pyqauto.config" = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
