[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pyqauto"
version = "1.0.0rc2"
description = "A local multi-source router for free, no-registration A-share market data adapters."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AStock Source Router Contributors" }
]
keywords = ["a-share", "quotes", "akshare", "baostock", "easyquotation", "source-router", "market-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "pandas>=1.5",
  "pytdx>=1.72",
]

[project.scripts]
pyqauto = "pyqauto.cli:main"

[project.optional-dependencies]
akshare = ["akshare>=1.12"]
baostock = ["baostock>=0.8.8"]
realtime = ["easyquotation>=0.5.0", "adata>=2.0.0"]
eastmoney = ["efinance>=0.5.0"]
tdx = ["pytdx>=1.72", "mootdx>=0.11.0"]
all = [
  "akshare>=1.12",
  "baostock>=0.8.8",
  "easyquotation>=0.5.0",
  "adata>=2.0.0",
  "efinance>=0.5.0",
  "pytdx>=1.72",
  "mootdx>=0.11.0",
]
dev = [
  "build>=1.2",
  "hatchling>=1.21",
  "pytest>=7.0",
  "ruff>=0.6.0",
  "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["astock_source_router", "pyqauto"]

[tool.hatch.build.targets.sdist]
include = [
  "/astock_source_router",
  "/pyqauto",
  "/docs",
  "/scripts",
  "/tests",
  "/README.md",
  "/SOURCE_POLICY.md",
  "/PROJECT_STATE.md",
  "/CHANGELOG.md",
  "/RELEASE_NOTES_1.0.0rc1.md",
  "/RELEASE_NOTES_1.0.0rc2.md",
  "/LICENSE",
  "/THIRD_PARTY_NOTICES.md",
  "/pyproject.toml",
]
exclude = [
  "/logs",
  "/local_reports",
  "/reports",
  "/aquote-router",
  "/dist",
  "/build",
  "/.venv",
  "/.venv_v1_rc_check",
  "*.jsonl",
  "*.sqlite3",
  "active.local",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".post_release_tmp_check_0154"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
